# flowscope

./: .gitignore  Dockerfile.frontend  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: trivy-security-scan.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: discovery.rs  main.rs  models.rs  routes.rs  websocket.rs
src/: App.tsx  index.css
src/api/: client.ts  index.ts  useFlowData.ts
src/components/: Breadcrumbs.tsx  ConnectionStatus.tsx  ContainerDetailPanel.tsx  DecisionNode.tsx  ExportPanel.tsx  FlowCanvas.tsx  GroupNode.tsx  Header.tsx  LayoutSelector.tsx  ProcessNode.tsx  SearchFilter.tsx  ServiceEdge.tsx  ServiceNode.tsx  ServicePanel.tsx
src/data/: mockData.ts
src/hooks/: useLiveData.ts  useWebSocket.ts
src/store/: flowStore.ts
