[package]
name = "flowscope-backend"
version = "0.1.0"
edition = "2021"
authors = ["Val <val@valina.ai>"]
description = "FlowScope - Docker container discovery and flowchart generation service"
license = "MIT"

# FlowScope Backend: Real-time Docker topology discovery
# Provides the data layer for the FlowScope interactive system navigator

[dependencies]
# Web Framework (matching valina-rust-backend patterns)
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Docker API
bollard = "0.18"

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1"

# Configuration
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
